<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ovh.rideau.cryptocalc.AlgChooserActivity">

    <TextView android:text="@string/simpleEuklidesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/aVal"
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:focusable="true"
        android:inputType="number"
        android:textStyle="bold"
        android:enabled="true"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />

    <Button
        style="@style/CalculateButton"
        android:id="@+id/calculateSimpleButton"
        android:layout_below="@+id/aVal"
        android:onClick="onClickCalculateSimpleButton"/>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/calculateSimpleButton"
        android:layout_alignParentLeft="true"
        android:baselineAligned="true"
        android:id="@+id/resultTable"
        android:orientation="vertical"
        android:stretchColumns="0,1,2,3">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            tools:ignore="UselessParent">

            <TextView
                style="@style/TableCell"
                android:text="@string/a"
                android:layout_column="0"/>

            <TextView
                style="@style/TableCell"
                android:text="@string/b"
                android:layout_column="1"/>

            <TextView
                style="@style/TableCell"
                android:text="@string/q"
                android:layout_column="2"/>

            <TextView
                style="@style/TableCell"
                android:text="@string/r"
                android:layout_column="3"/>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView3"
        android:text="@string/gdc"
        style="@style/GDCStyle" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/bVal"
        android:textStyle="bold"
        android:layout_alignTop="@+id/aVal"
        android:layout_alignRight="@+id/calculateSimpleButton"
        android:layout_alignEnd="@+id/calculateSimpleButton"
        android:inputType="number"
        android:enabled="true"
        android:focusable="true" />

</RelativeLayout>